<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ui.auth.signin.SignInFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinEmal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmal"
            android:layout_width="match_parent"
            android:background="@drawable/ic_login"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/input_your_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tinPassword"
        android:layout_width="match_parent"
        android:background="@drawable/ic_login"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standart"
        android:layout_marginTop="@dimen/margin_standart"
        app:layout_constraintTop_toBottomOf="@id/tinEmal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPasswort"
            android:background="@drawable/ic_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_your_passwort"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_standart"
        android:text="@string/register"
        app:cornerRadius="16dp"
        android:backgroundTint="#EF0957"
        app:layout_constraintBottom_toTopOf="@id/btnSignIn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standart"
        android:text="@string/sign_in"
        app:cornerRadius="16dp"
        android:backgroundTint="#EF0957"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>